
ChangeLog
   [ + added, - removed, * changed ]

   + (05/Apr/2011) Additional support for pthread library
   * (31/Mar/2011) Fix for matching user communications in merger.
   * (28/Mar/2011) Support for XL -qdebug=function_trace
   * (23/Mar/2011) Several fixes to revive CBEA support
   * (22/Mar/2011) Increase buffer size to 500k elements
   * (03/Mar/2011) Fix communication between threads (i.e. task != 1 is sending
                     or receiving)
                   Differentiate MPI_Init_thread per C/Fortran (Fortran
                     implementation may be missing but C available)
   * (24/Feb/2011) Fix typo in Extrae_fini that prevented tracing applications in fortran
   + (02/Feb/2011) Added example of dynamic load instrumentation in AIX
   * (01/Feb/2011) Bug solved: looking for hw signals in PAPI 4.x
                   Change at global operations now uses MPI_Comm_compare
                   Honor -f/-f-relative with the new MPIT file distribution in set-* directories
                   Fix sampled address translation. The address that was 
                     obtained by the overflow was pointing to the incorrect line no
                     after a fix in revision 425.
   * (21/Jan/2011) AIX support to generate libmpitrace.so without libtool
                   (libtool in AIX does not allow generating shared libraries)
   + (19/Nov/2010) FreeBSD support (examples & --with-libexecinfo)
                   Simplification of example install rules in Makefile.am
                   Change bash  to sh in substitute/substitute-all
   * (18/Nov/2010) Fix: when sorting addresses wipe the address2info cache.
   * (12/Nov/2010) Fixes compilation when struct mallinfo is not available.
                   Fixes compilation if BFD&liberty are not available in the system.
                   Put the EXTRAE_LABELS content at the end of the PCF file.
   * (09/Nov/2010) Tagged Extrae 2.1.1
   * (09/Nov/2010) Bugfix, mpi2prv triead *always* to generate dimemas traces.