@@ -1481,6 +1481,8 @@ AC_DEFUN([AX_PROG_PAPI],
 
    AM_CONDITIONAL(HAVE_PAPI, test "${PAPI_ENABLED}" = "yes")
 
+   AC_DEFINE([SAMPLING_SUPPORT], [1], [Enable Sampling])
+
    if test "${PAPI_ENABLED}" = "yes" ; then
       PAPI_SAMPLING_ENABLED="yes"
       AC_DEFINE([PAPI_COUNTERS], [1], [PAPI is used as API to gain access to CPU hwc])
@@ -1490,17 +1492,17 @@ AC_DEFUN([AX_PROG_PAPI],
          AC_CHECK_MEMBER([PAPI_substrate_info_t.supports_hw_overflow],[support_hw_overflow="yes"],[support_hw_overflow="no"],[#include <papi.h>])
          if test "${support_hw_overflow}" = "yes" ; then
             AC_DEFINE([HAVE_SUPPORT_HW_OVERFLOW], [1], [Use supports_hw_overflow field])
-            AC_DEFINE([SAMPLING_SUPPORT], [1], [Enable PAPI sampling support])
+            AC_DEFINE([PAPI_SAMPLING_SUPPORT], [1], [Enable PAPI sampling support])
          else
             AC_CHECK_MEMBER([PAPI_substrate_info_t.hardware_intr_sig],[hardware_intr_sig="yes"],[hardware_intr_sig="no"],[#include <papi.h>])
             if test "${hardware_intr_sig}" = "yes" ; then
                AC_DEFINE([HAVE_HARDWARE_INTR_SIG], [1], [Use hardware_intr_sig field])
-               AC_DEFINE([SAMPLING_SUPPORT], [1], [Enable PAPI sampling support])
+               AC_DEFINE([PAPI_SAMPLING_SUPPORT], [1], [Enable PAPI sampling support])
             else
                AC_CHECK_MEMBER([PAPI_component_info_t.hardware_intr],[support_comp_hw="yes"],[support_comp_hw="no"],[#include <papi.h>])
                if test "${support_comp_hw}" = "yes" ; then
                   AC_DEFINE([HAVE_COMPONENT_HARDWARE_INTR], [1], [Use hardware_intr in PAPI_component_info_t field])
-                  AC_DEFINE([SAMPLING_SUPPORT], [1], [Enable PAPI sampling support])
+                  AC_DEFINE([PAPI_SAMPLING_SUPPORT], [1], [Enable PAPI sampling support])
                else
                   AC_MSG_NOTICE([Cannot determine how to check whether PAPI supports HW overflows! Will use software-based sampling.])
                fi
