@@ -40,7 +40,7 @@
     <cpu enabled="yes" starting-set-distribution="1">
       <set enabled="yes" domain="all" changeat-globalops="5">
         PAPI_TOT_INS,PAPI_TOT_CYC,PAPI_L1_DCM
-        <sampling enabled="no" frequency="100000000">PAPI_TOT_CYC</sampling>
+        <sampling enabled="no" period="100000000">PAPI_TOT_CYC</sampling>
       </set>
       <set enabled="yes" domain="user" changeat-globalops="5">
         PAPI_TOT_INS,PAPI_FP_INS,PAPI_TOT_CYC
