@@ -5,7 +5,6 @@ Although \TRACE is configured through an XML file (which is pointed by the {\tt 
 This appendix presents the environment variables the \TRACE package uses if {\tt EXTRAE\_CONFIG\_FILE} is not set and a description. For those environment variable that refer to XML 'enabled' attributes ({\em i.e.}, that can be set to "yes" or "no") are considered to be enabled if their value are defined to 1.
  
 \begin{landscape}
-
 \begin{table}
 \centerline {
 \begin{tabular}{| p{7cm} | p{14cm} |}
@@ -105,6 +104,8 @@ This appendix presents the environment variables the \TRACE package uses if {\tt
   EXTRAE\_PACX\_STATISTICS & Set to 1 if basic PACX statistics must be collected in burst mode.\\
   \hline
   EXTRAE\_PROGRAM\_NAME & Specify the prefix of the resulting intermediate trace files.\\ 
+  \hline
+  EXTRAE\_SAMPLING\_PERIOD & Enable time-sampling capabilities with the indicated period.\\
   \hline
   EXTRAE\_RUSAGE & Instrumentation emits resource usage at flush points if set to 1.\\
   \hline
